<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iChat</string>
    <string name="action_settings">Settings</string>
    <string name="splash_title">iChat</string>
    <string name="title_activity_login">用户登陆</string>
    <string name="login_account">账号：</string>
    <string name="login_password">密码：</string>
    <string name="login_ok">登陆</string>
    <string name="login_register">还没注册</string>
    <string name="title_activity_register">注册用户</string>
    <string name="hello_world">Hello world!</string>
    <string name="register_account_hint">请输入账号</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="register_repassword_hint">请再次输入密码</string>
    <string name="register_ok">注册</string>
    <string name="register_agreenment">点击上面的“注册”按钮，即代表你同意本软件协议</string>
    <string name="title_activity_add_friend">添加朋友</string>
    <string name="add_friend_search">搜索</string>
    <string name="title_activity_ichat">iChat</string>
	<string name="action_add">add</string>
	<string name="action_add_friend">添加朋友</string>
	<string name="tab_chat">聊天</string>
	<string name="tab_discovery">发现</string>
	<string name="tab_contacts">通讯录</string>
</resources>
