<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity" >
	<EditText
	    android:id="@+id/register_account"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="12sp"
	    android:textColorHint="#aaa"
	    android:layout_margin="10dp"
	    android:hint="@string/register_account_hint"/>
	<EditText 
	    android:id="@+id/register_password"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="12sp"
	    android:textColorHint="#aaa"
	    android:layout_margin="10dp"
	    android:hint="@string/register_password_hint"/>
	<EditText
	    android:id="@+id/register_repassword"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="12sp"
	    android:textColorHint="#aaa"
	    android:layout_margin="10dp"
	    android:hint="@string/register_repassword_hint"/>
	<Button
	    android:id="@+id/register_ok"
	    android:layout_margin="10dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/register_ok"/>
	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="10sp"
	    android:layout_margin="10dp"
	    android:textColor="#333"
	    android:text="@string/register_agreenment"/>
</LinearLayout>
