<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".LoginActivity">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="30dp">
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/login_account"/>
		<EditText
		    android:id="@+id/login_account"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="30dp">
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/login_password"/>
		<EditText 
		    android:id="@+id/login_password"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:password="true"/>
	</LinearLayout>
	<Button
	    android:id="@+id/login_ok"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="30dp"
	    android:text="@string/login_ok"/>
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <Button
	        android:id="@+id/login_register"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/login_register"
	        android:layout_alignParentRight="true"
	        android:layout_margin="10dp"
	        android:textSize="14sp"
		    android:textColor="#333"
	        android:background="#00000000"/>
	</RelativeLayout>
</LinearLayout>
